--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 @import "general";
 @import "share";
 @import 'bower_components/guss-grid-system/_grid-system.scss';
+@import 'back-to-top';
 
 
 $bg-color: $news-main-2;
@@ -19,20 +20,19 @@ body{
 }
 .element-atom,
 .interactive-atom {
-    margin: 0 !important;
-    
+    margin: 0 !important;   
 }
 
 .gv-card-wrapper{
 	posiiton:relative;
 	width:100%;
-	background-color: rgba($news-main-2,0.4);
+	background-color: rgba($news-main-2,0.6);
 
 	margin-top: gs-height(1);
 	margin-left: -10px;
 	padding-left: 10px;
     padding-right: 10px;
-    border-top: 1px solid rgba($news-support-2,0.2);
+    border-top: 1px solid rgba($news-support-2,0.3);
 
     h3,h5{
     	@include fs-headline(5);
@@ -43,8 +43,7 @@ body{
     	@include fs-headline(3);
     }
 
-
-     @include mq(tablet){
+    @include mq(tablet){
      	padding-right:0;
     	margin-left:-20px;
     	padding-left:20px;
@@ -69,15 +68,27 @@ body{
 	margin-bottom: $gs-baseline;
 
 	h2{
-		@include fs-header(3);
+		@include fs-header(2);
+			@include mq(tablet){
+				@include fs-header(3);
+			}
 	}
 	h3{
+
+		@include fs-header(3);
+			@include mq(tablet){
+				@include fs-headline(5);
+			}
 		margin:0 !important;
 
 	}
 	p{
-		@include fs-bodyCopy(2);
-		margin-bottom: $gs-baseline*1.25;
+		@include fs-textSans(2);
+		@include mq(tablet){
+			@include fs-bodyCopy(2);
+			margin-bottom: $gs-baseline*1.25;
+		}
+		
 	}
 	
 }
@@ -108,9 +119,14 @@ body{
 	margin: 0 !important;
    color:#222;
 
-    @include mq(desktop){
+   @include mq(tablet){
     	@include fs-headline(3);
     	max-width: 400px;
+    }
+
+    @include mq(wide){
+    	@include fs-headline(3);
+    	max-width: 560px;
     }
 
 
@@ -146,7 +162,7 @@ body{
 	background: url('./assets/imgs/melenchon.jpg');
 }
 
-.gv-MarieLePen{
+.gv-MarineLePen{
 	background: url('./assets/imgs/lepen.jpg');
 }
 
